deployments/k8/gallery-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gallery-service
  labels:
    app: gallery-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gallery-service
  template:
    metadata:
      labels:
        app: gallery-service
    spec:
      containers:
        - name: gallery-service
          imagePullPolicy: Never
          image: k8/gallery-service:latest
