deployments/k8/gallery-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gallery-service
spec:
  type: ClusterIP
  selector:
    app: gallery-service
  ports:
    - port: 8100
      targetPort: 8100
