deployments/k8/gallery-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - path: /gallery(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: gallery-service
                port:
                  number: 8100
